--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,6 @@
 spring.h2.console.enabled=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
 
 okta.oauth2.issuer=https://dev-130019.okta.com/oauth2/default
 okta.oauth2.client-id=0oawok15zzm6jwvUf4x6
